--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "pie-htc",
-  "version": "1.0.0",
+  "version": "2.0.0beta2-SNAPSHOT",
   "homepage": "http://css3pie.com/",
   "authors": [
     "Cedric LOMBARDOT <cedric.lombardot@gmail.com>"
